--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
     },
     "AUTH_USERS": {
       "description": "allow only pre-defined users to use this bot",
-      "value": "7351948 466337795"
+      "value": "7351948 466337795",
+      "required": false
     },
     "BANNED_USERS": {
       "description": "Banned Unwanted members..",
